<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile_frag">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightbrown">
        <TextView
            android:id="@+id/TextHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/petData"
            android:textSize="26dp"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:id="@+id/PetName"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/TextHead"
            style="@style/MyTextInputStyle"
            android:background="@drawable/custom_edittext"
            android:drawablePadding="8dp"
            android:hint="@string/petName"
            android:padding="8dp"
            android:textColor="@color/black"/>
         
        <EditText
            android:id="@+id/PetType"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            style="@style/MyTextInputStyle"
            android:drawablePadding="8dp"
            android:hint="@string/petType"
            android:padding="8dp"
            android:layout_below="@+id/PetName"
            android:background="@drawable/custom_edittext"
            />
        <EditText
            android:id="@+id/PetBreed"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            style="@style/MyTextInputStyle"
            android:hint="@string/petBreed"
            android:drawablePadding="8dp"
            android:padding="8dp"
            android:layout_below="@+id/PetType"
            android:background="@drawable/custom_edittext"
            />

        <EditText
            android:id="@+id/PetDate"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/PetBreed"
            android:background="@drawable/custom_edittext"
            style="@style/MyTextInputStyle"
            android:drawablePadding="8dp"
            android:hint="@string/petDate"
            android:padding="8dp"
            android:textColor="@color/black"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

        <Button
            android:id="@+id/ChangePetButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brown"
            android:textColor="@color/black"
            android:text="@string/petChange"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/PetDate" />
        <ImageView
            android:id="@+id/CatImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ChangePetButton"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/im_girlwithparrot" />
    </RelativeLayout>
</FrameLayout>